--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.Link {
+    text-decoration: none;
+    -webkit-tap-highlight-color: transparent;
+  }
+  .Link:focus {
+    outline: none !important;
+    outline: none; /* remove outline */
+    box-shadow: none; /* remove box shadow */
+    
+  }
