--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html::-webkit-scrollbar{
+  display: none;
+}
+html {
+  scrollbar-width: none;
+}
 .Link {
     text-decoration: none;
     -webkit-tap-highlight-color: transparent;
